syntax = "proto3";

package prism_tank_grpc;

enum ResultCode {
    OK = 0;
    ERROR = 1;
}

message EchoRequest {
    string value = 1;
}

message EchoReply {
    string value = 1;
}